fix svg icon alignment,add bg body

--- a/src/sass/components/page-toolbox.sass
+++ b/src/sass/components/page-toolbox.sass
@@ -6,7 +6,7 @@
     .nav-link
       font-size: 12px !important
       height: 3em
-      line-height: 2.5em
+      line-height: 3em
       font-weight: bold
       color: $gray-a !important
       span
@@ -15,9 +15,9 @@
           float: left
           margin-right: .5em
           height: 2em
-          line-height: 2em
+          line-height: 2.3em
       svg
-        margin-top: .1em
+        margin-top: .2em
         width: 22px
         height: 2em
 
