--- a/src/sass/pages/event.scss
+++ b/src/sass/pages/event.scss
@@ -1,5 +1,5 @@
 .event {
-  background: #fff;
+  background: rgba(170, 170, 170, 0.2);
 }
 
 .event-body {
